--- a/package.json
+++ b/package.json
@@ -9,15 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.15",
+    "@reduxjs/toolkit": "^2.5.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
+    "firebase": "^11.1.0",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
+    "next": "^15.1.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.2",
+    "redux-persist": "^6.0.0",
+    "tw-elements": "^2.0.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/redux-persist": "^4.3.1",
+    "daisyui": "^4.12.23",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
